# blobbers

./: Cargo.toml  README.md  bench_results.md
benches/: perf.rs  perf_naive.rs  perf_pack_naive.rs  perf_packing.rs
src/: main.rs  packer_naive.rs  packer_tight.rs
