[package]
name = "blobbers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
bitvec = "1.0.0"
rand = "0.8.5"
criterion = { version = "0.3.5", features = ["html_reports"] }

[[bench]]
name = "perf_pack_naive"
#name = "perf_pack_tight"
harness = false
